# LMSochka

./: .env.docker.example  .gitignore  README.md  compose.yaml  deploy.py  ГРУППОВЫЕ_ЗАДАНИЯ_КАК_РАБОТАЕТ.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/database/: database.py  models.py
backend/app/routers/: announcements.py  assignments.py  auth.py  classes.py  files.py  grades.py  groups.py  me.py  notifications.py  questions.py  quizzes.py  submissions.py
backend/app/schemas/: announcement_schemas.py  assignment_schemas.py  auth_schemas.py  class_schemas.py  errors.py  file_schemas.py  grade_schemas.py  gradebook_schemas.py  group_schemas.py  me_schemas.py  notification_schemas.py  pagination.py  question_schemas.py  quiz_schemas.py  submission_schemas.py  user_schemas.py
backend/app/services/: access.py  announcement_service.py  assignment_service.py  auth_service.py  class_service.py  file_service.py  grade_service.py  group_service.py  me_service.py  notification_service.py  password_service.py  permissions_service.py  question_service.py  quiz_service.py  token_service.py  (+1 more)
backend/tests/: conftest.py  test_announcements.py  test_api_unification.py  test_assignment_status.py  test_assignments.py  test_auth.py  test_classes.py  test_classes_edit.py  test_files.py  test_grades.py  test_groups.py  test_me_grades.py  test_membership.py  test_notifications.py  test_product_logic.py  test_quizzes.py  test_submissions.py  test_transfer_ownership.py
(+199 files in other folders)
