[project]
name = "lms-backend"
version = "0.1.0"
description = "LMS backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "pyjwt[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E,W — pycodestyle; F — pyflakes; I — isort; UP — pyupgrade;
# B — bugbear (типичные баги); SIM — flake8-simplify (упрощение кода).
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
# B008 — Depends(security) в дефолтах аргументов это паттерн FastAPI, не баг.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# В тестах допустимы длинные тестовые данные и более вольное оформление.
"tests/**" = ["E501"]
